# strawberry

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  appconfig.json  bench-stats.py  demo-block-sample.json  go.mod  go.sum
.github/workflows/: go-ci.yml
bandersnatch/: Cargo.toml
bandersnatch/src/: lib.rs
cmd/strawberry/: full_info.json  main.go
docs/: index.md  main.go  pvm.md
erasurecoding/: Cargo.toml
erasurecoding/src/: lib.rs
internal/accumulate/: history.go
internal/assuring/: assurance.go
internal/authorization/: authorization.go
internal/block/: assurance.go  block.go  block_integration_test.go  block_test.go  constants.go  constants_integration.go  dispute.go  guarantee.go  header.go  header_test.go  jam_test.go  preimage.go  ticket.go
internal/chain/: service.go  service_test.go
internal/common/: constants.go  constants_integration.go  shuffling.go
internal/constants/: chain.go  chain_conformance.go  chain_tiny.go  constants.go
internal/crypto/: bandersnatch.go  constants.go  hash.go  keys.go  sets.go
internal/d3l/: segments_fetcher.go  segments_fetcher_test.go
internal/disputes/: disputes.go
internal/disputing/: disputes.go
internal/erasurecoding/: erasurecoding.go  erasurecoding_test.go
internal/guaranteeing/: guarantee.go
internal/jamtime/: constants.go  constants_integration.go  epoch.go  epoch_test.go  errors.go  jamtime.go  jamtime_test.go  timeslot.go  timeslot_test.go
internal/merkle/: branch.go  branch_test.go  errors.go  leaf.go  leaf_test.go  (+3 more)
tests/: output.json  scale_decode_test.go
(+1143 files in other folders)
